@@ -699,3 +699,16 @@ ALTER TABLE BATCH ADD FOREIGN KEY (locked_by) references session (session_id)
 ON DELETE SET NULL;
 
 COMMIT;
+
+BEGIN;
+ALTER TABLE invoice ADD vendor_sku text;
+UPDATE invoice SET vendor_sku = (select min(partnumber) from partsvendor
+                                  where parts_id = invoice.parts_id
+                                        AND credit_id = (
+                                                 select entity_credit_account
+                                                   from ap
+                                                  where ap.id = invoice.trans_id
+                                        )
+                                )
+ WHERE trans_id in (select id from ap);
+COMMIT;
