@@ -8,6 +8,7 @@ Changelog for 1.3.46
 * Fixed related bug to 1259 on invoices (Chris T)
 * Some log quieting fixes. (Chris T)
 * Fixed bug 1262, cannot post overpayment with formatted numbers (Chris T)
+* Fixed bug 1260, Multiple vendor skus breaks display of invoice (Chris T)
 
 Chris T is Chris Travers
 Pongracz I is Pongracz Istvan
